--- a/views/index.mustache
+++ b/views/index.mustache
@@ -3,39 +3,42 @@
 {{>head}}
 
 <body class=" ">
-	{{>nav}}
-	<div class="main-container">
-		<section class="text-center height-80 imagebg" data-overlay="4">
-      <div class="background-image-holder">
-        <img alt="background" src="/images/city_view.jpg" />
-      </div>
-      <div class="container pos-vertical-center">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="typed-headline">
-              <span class="h1 inline-block">I'm Stack &mdash; A killer template for</span>
-              <span class="h1 inline-block typed-text typed-text--cursor color--primary" data-typed-strings="startups,SaaS,marketing sites, portfolios,blogging,rapid development,business,showcasing products"></span>
+    {{>nav}}
+    <div class="main-container">
+        <section class="text-center height-80 imagebg" data-overlay="4">
+            <div class="background-image-holder">
+                <img alt="background" src="/images/city_view.jpg" />
+                <div style="width:100%; height:100%; z-index:999; background-color:#3f3f3fc2"></div>
             </div>
-            <p class="lead">
-              Build lean, beautiful websites with a clean and contemporary
-              <br class="hidden-xs hidden-sm" /> look to suit a range of purposes.
-            </p>
-            <a class="btn btn--primary type--uppercase" href="#">
-              <span class="btn__text">
-                Launch The Builder
-              </span>
-            </a>
-            <span class="block type--fine-print">or
-              <a href="index.html">view the demos</a>
-            </span>
-          </div>
-        </div>
-        <!--end of row-->
-      </div>
-      <!--end of container-->
-    </section>
-	</div>
-	{{>footer}}
-	{{>scripts}}
+            <div class="container pos-vertical-center">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="typed-headline">
+                            <span class="h1 inline-block">Property Manager -</span>
+                            <span class="h1 inline-block typed-text typed-text--cursor color--primary" data-typed-strings="Experience excellence."></span>
+                        </div>
+                        <p class="lead">
+                            Property Manager offers Premium, luxury apartments and townhouses close to the center of the city.
+                        </p>
+                    </div>
+                </div>
+                <!--end of row-->
+            </div>
+            <!--end of container-->
+        </section>
+        <section class="text-center ">
+            <div class="container">
+                <div class="row">
+                    {{#data}}
+                        {{>availabilitySmall}}
+                    {{/data}}
+                </div>
+                <!--end of row-->
+            </div>
+            <!--end of container-->
+        </section>
+    </div>
+    {{>footer}} {{>scripts}}
 </body>
+
 </html>
