--- a/views/index.mustache
+++ b/views/index.mustache
@@ -15,7 +15,7 @@
                     <div class="col-sm-12">
                         <div class="typed-headline">
                             <span class="h1 inline-block">Property Manager -</span>
-                            <span class="h1 inline-block typed-text typed-text--cursor color--primary" data-typed-strings="Experience excellence."></span>
+                            <span class="h1 inline-block typed-text typed-text--cursor color--primary" data-typed-strings="Experience Perfection."></span>
                         </div>
                         <p class="lead">
                             Property Manager offers Premium, luxury apartments and townhouses close to the center of the city.
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="row">
                     {{#data}}
-                        {{>availabilitySmall}}
+                        {{>buildingSmall}}
                     {{/data}}
                 </div>
                 <!--end of row-->
