setup dynamic data

--- a/views/building.mustache
+++ b/views/building.mustache
@@ -5,7 +5,23 @@
 <body class=" ">
   {{>nav}}
     <div class="main-container">
-        
+        <h1>{{name}} {{city}} {{state}}</h1>
+        <br />
+        {{#apartments}}
+            <h5>{{numBed}}</h5>
+            <h5>{{numBath}}</h5>
+            <h5>{{price}}</h5>
+            <h5>{{availability}}</h5>
+        {{/apartments}}
+        <br />
+        <form action="/{{slug}}" method="post">
+            <input type="text" name="numBed" placeholder="Num Beds" />
+            <input type="text" name="numBath" placeholder="Num Baths" />
+            <input type="text" name="availability" placeholder="Availability" />
+            <input type="text" name="price" placeholder="Price" />
+            <input type="text" name="description" placeholder="Description" />
+            <button type="submit">Create Apartment</button>
+        </form>    
     </div>
     {{>footer}} {{>scripts}}
 </body>
