--- a/views/partials/buildingSmall.mustache
+++ b/views/partials/buildingSmall.mustache
@@ -1,9 +1,11 @@
 <div class="col-sm-4">
-    <div class="feature feature-1">
-        <img alt="Image" src="/images/cowork-1.jpg" />
-        <div class="feature__body boxed boxed--lg boxed--border">
-            <h4>{{name}}</h4>
-            <h5>{{city}},&nbsp;{{state}}</h5>
+    <a href="/{{slug}}">
+        <div class="feature feature-1">
+            <img alt="Image" src="/images/cowork-1.jpg" />
+        <div class="feature__body boxed boxed--lg           boxed--border">
+                <h4>{{name}}</h4>
+                <h5>{{city}},&nbsp;{{state}}</h5>
+            </div>
         </div>
-    </div>
+    </a>
 </div>
