--- a/.deploy/views/index.mustache
+++ b/.deploy/views/index.mustache
@@ -38,7 +38,7 @@
             <!--end of container-->
         </section>
     </div>
-    {{>footer}} {{>scripts}} {{>lightbox}}
+    {{>footer}} {{>scripts}} {{>login}}
 </body>
 
 </html>
